--- a/Cmpe202-Starbucks/src/main/resources/application.properties
+++ b/Cmpe202-Starbucks/src/main/resources/application.properties
@@ -5,15 +5,18 @@ spring.datasource.username=starbucks
 spring.datasource.password=starbucks_123
 spring.datasource.dbcp2.max-total=1
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 cloud.aws.region.static=us-east-2
 cloud.aws.stack.auto=false
-server.port=8081
+server.port=6089
 
 #logging.level.org.springframework=TRACE
 #TRACE
 #logging.level.com=TRACE
+
+
+
