--- a/StarbucksApplication/src/main/resources/application.properties
+++ b/StarbucksApplication/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.servlet.contextPath=/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://starbucks.cvsve6w60qwo.us-east-1.rds.amazonaws.com/starbucks
-spring.datasource.username=starbucks
-spring.datasource.password=starbucks_123
+spring.datasource.username=username
+spring.datasource.password=***
 spring.datasource.dbcp2.max-total=1
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
