--- a/StarbucksApplication/src/main/resources/application.properties
+++ b/StarbucksApplication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.contextPath=/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://starbucks.cvsve6w60qwo.us-east-1.rds.amazonaws.com/starbucks
+spring.datasource.url=jdbc:mysql://Database URL/dbname
 spring.datasource.username=username
 spring.datasource.password=***
 spring.datasource.dbcp2.max-total=1
